@@ -37,6 +37,7 @@ maxReqBody=2000
 disableParsers=
 maxESConns=3
 enablePacketDedup=false
+authMode=regressionTests
 
 packetThreads=2
 magicMode=basic
@@ -95,6 +96,7 @@ businessDays=1,2,3,4,5
 arkimeWebURL = localhost:8123/arkime/
 turnOffGraphDays = 30
 disableUserPasswordUI=false
+authMode=digest
 
 [testmulties]
 pcapWriteMethod=simple
@@ -156,6 +158,7 @@ cronQueries=false
 usersPrefix=tests
 usersElasticsearch=http://127.0.0.1:9200
 passwordSecret=testtest
+authMode=header
 userNameHeader=arkime_user
 userAutoCreateTmpl={"userId": "${this.arkime_user}", "userName": "${this.arkime_user_name}", "enabled": true, "webEnabled": true, "headerAuthEnabled": true, "emailSearch": true, "createEnabled": false, "removeEnabled": false, "packetSearch": true }
 
